--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -195,7 +195,7 @@
                                 <i class="material-icons">fact_check</i>
                             </div>
                             <p class="card-category">Order done</p>
-                            <h3 class="card-title" th:text="${orderDone}">+245</h3>
+                            <h3 class="card-title" th:text="${totalExtra}">+245</h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
