--- a/src/main/resources/templates/detailnews.html
+++ b/src/main/resources/templates/detailnews.html
@@ -31,7 +31,7 @@
                             </div>
 
                             <div class="entry-content editor-content">
-                                <p th:text="${news.detailed_description}"></p>
+                                <p th:text="${news.description_detaile}"></p>
                             </div>
                         </div>
                     </article>
