--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -578,7 +578,7 @@
 
                     <div class="entry-body">
                         <div class="entry-meta">
-                            <a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.updatedAt}">Aug 22, 2021</a>, 0 comment
+                            <a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.updatedAt}">Aug 22, 2021</a>
                         </div><!-- End .entry-meta -->
 
                         <h3 class="entry-title">
