--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -69,103 +69,32 @@
                         <div class="widget widget-search">
                             <h3 class="widget-title">Search</h3><!-- End .widget-title -->
 
-                            <form action="#">
-                                <label for="ws" class="sr-only">Search in blog</label>
-                                <input type="search" class="form-control" name="ws" id="ws" placeholder="Search in blog" required>
+                            <form method="post" th:action="@{/newsIndexsearch}">
+                                <input type="text" class="form-control" name="name" placeholder="Search in blog">
                                 <button type="submit" class="btn"><i class="icon-search"></i><span class="sr-only">Search</span></button>
                             </form>
                         </div><!-- End .widget -->
 
-                        <div class="widget widget-cats">
-                            <h3 class="widget-title">Categories</h3><!-- End .widget-title -->
-
-                            <ul>
-                                <li><a href="#">Lifestyle<span>3</span></a></li>
-                                <li><a href="#">Shopping<span>3</span></a></li>
-                                <li><a href="#">Fashion<span>1</span></a></li>
-                                <li><a href="#">Travel<span>3</span></a></li>
-                                <li><a href="#">Hobbies<span>2</span></a></li>
-                            </ul>
-                        </div><!-- End .widget -->
 
                         <div class="widget">
-                            <h3 class="widget-title">Popular Posts</h3><!-- End .widget-title -->
+                            <h3 class="widget-title">New Post</h3><!-- End .widget-title -->
 
                             <ul class="posts-list">
-                                <li>
+                                <li th:each="blog: ${blogs}">
                                     <figure>
-                                        <a href="#">
-                                            <img src="images/index/banners/banner-8.jpg" alt="post">
+                                        <a th:href="@{/detailnews(id=${blog.id})}">
+                                            <img th:src="${blog.image}" alt="image desc">
                                         </a>
                                     </figure>
 
                                     <div>
-                                        <span>Nov 22, 2018</span>
-                                        <h4><a href="#">Aliquam tincidunt mauris eurisus.</a></h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <figure>
-                                        <a href="#">
-                                            <img src="images/index/banners/banner-8.jpg" alt="post">
-                                        </a>
-                                    </figure>
-
-                                    <div>
-                                        <span>Nov 19, 2018</span>
-                                        <h4><a href="#">Cras ornare tristique elit.</a></h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <figure>
-                                        <a href="#">
-                                            <img src="images/index/banners/banner-8.jpg" alt="post">
-                                        </a>
-                                    </figure>
-
-                                    <div>
-                                        <span>Nov 12, 2018</span>
-                                        <h4><a href="#">Vivamus vestibulum ntulla nec ante.</a></h4>
-                                    </div>
-                                </li>
-                                <li>
-                                    <figure>
-                                        <a href="#">
-                                            <img src="images/index/banners/banner-8.jpg" alt="post">
-                                        </a>
-                                    </figure>
-
-                                    <div>
-                                        <span>Nov 25, 2018</span>
-                                        <h4><a href="#">Donec quis dui at dolor  tempor interdum.</a></h4>
+                                        <span ><a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.createdAt}">Aug 22, 2021</a></span>
+                                        <h4><a th:href="@{/detailnews(id=${blog.id})}" th:text="${blog.name}">Aliquam tincidunt mauris eurisus.</a></h4>
                                     </div>
                                 </li>
                             </ul><!-- End .posts-list -->
                         </div><!-- End .widget -->
 
-                        <div class="widget widget-banner-sidebar">
-                            <div class="banner-sidebar-title">ad box 280 x 280</div><!-- End .ad-title -->
-
-                            <div class="banner-sidebar banner-overlay">
-                                <a href="#">
-                                    <img src="images/index/banners/banner-8.jpg" alt="banner">
-                                </a>
-                            </div><!-- End .banner-ad -->
-                        </div><!-- End .widget -->
-
-                        <div class="widget">
-                            <h3 class="widget-title">Browse Tags</h3><!-- End .widget-title -->
-
-                            <div class="tagcloud">
-                                <a href="#">fashion</a>
-                                <a href="#">style</a>
-                                <a href="#">women</a>
-                                <a href="#">photography</a>
-                                <a href="#">travel</a>
-                                <a href="#">shopping</a>
-                                <a href="#">hobbies</a>
-                            </div><!-- End .tagcloud -->
-                        </div><!-- End .widget -->
 
                         <div class="widget widget-text">
                             <h3 class="widget-title">About Blog</h3><!-- End .widget-title -->
