--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -37,18 +37,18 @@
                                     </div><!-- End .toolbox-info -->
                                 </div><!-- End .toolbox-left -->
 
-                                <div class="toolbox-right">
-                                    <div class="toolbox-sort">
-                                        <label for="sortby">Sort by:</label>
-                                        <div class="select-custom">
-                                            <select name="sortby" id="sortby" class="form-control">
-                                                <option value="popularity" selected="selected">Most Popular</option>
-                                                <option value="rating">Most Rated</option>
-                                                <option value="date">Date</option>
-                                            </select>
-                                        </div>
-                                    </div><!-- End .toolbox-sort -->
-                                </div><!-- End .toolbox-right -->
+<!--                                <div class="toolbox-right">-->
+<!--                                    <div class="toolbox-sort">-->
+<!--                                        <label for="sortby">Sort by:</label>-->
+<!--                                        <div class="select-custom">-->
+<!--                                            <select name="sortby" id="sortby" class="form-control">-->
+<!--                                                <option value="popularity" selected="selected">Most Popular</option>-->
+<!--                                                <option value="rating">Most Rated</option>-->
+<!--                                                <option value="date">Date</option>-->
+<!--                                            </select>-->
+<!--                                        </div>-->
+<!--                                    </div>&lt;!&ndash; End .toolbox-sort &ndash;&gt;-->
+<!--                                </div>&lt;!&ndash; End .toolbox-right &ndash;&gt;-->
                             </div><!-- End .toolbox -->
                             <div class="products mb-3">
                                 <div class="row justify-content-center">
@@ -92,12 +92,6 @@
 
                             <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item">
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1"
-                                           aria-disabled="true">
-                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                        </a>
-                                    </li>
                                     <li class="page-item"
                                         th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}"
                                         th:classappend="${t==page} ? active">
@@ -105,11 +99,6 @@
                                            th:text="${t+1}"></a>
                                     </li>
                                     <li class="page-item-total" th:text="'of ' + ${totalPage}">of 6</li>
-                                    <li class="page-item">
-                                        <a class="page-link page-link-next" href="#" aria-label="Next">
-                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                        </a>
-                                    </li>
                                 </ul>
                             </nav>
                         </div><!-- End .col-lg-9 -->
