--- a/src/main/resources/templates/listproductcategory.html
+++ b/src/main/resources/templates/listproductcategory.html
@@ -32,29 +32,15 @@
                             <div class="toolbox">
                                 <div class="toolbox-left">
                                     <div class="toolbox-info">
-                                        Showing Products
+                                        Showing <span th:text="${page+1} + ' pages'"></span> Products
                                     </div><!-- End .toolbox-info -->
-                                </div><!-- End .toolbox-left -->
-
-                                <div class="toolbox-right">
-                                    <div class="toolbox-sort">
-                                        <label for="sortby">Sort by:</label>
-                                        <div class="select-custom">
-                                            <select name="sortby" id="sortby" class="form-control">
-                                                <option value="popularity" selected="selected">Most Popular</option>
-                                                <option value="rating">Most Rated</option>
-                                                <option value="date">Date</option>
-                                            </select>
-                                        </div>
-                                    </div><!-- End .toolbox-sort -->
-                                </div><!-- End .toolbox-right -->
+                                </div>
                             </div><!-- End .toolbox -->
 
                             <div class="products mb-3">
                                 <div class="row justify-content-center">
                                     <div class="col-6 col-md-4 col-lg-4 col-xl-3" th:each="product : ${products}">
                                         <div class="product product-7 text-center">
-                                            <a href="@{/seller}">  <p th:text="${product.user.username}"></p></a>
                                             <figure class="product-media">
                                                 <span class="product-label label-out">Out of Stock</span>
                                                 <a th:href="@{/productdetail(id=${product.productid})}">
@@ -89,25 +75,15 @@
                                 </div><!-- End .row -->
                             </div><!-- End .products -->
 
-
                             <nav aria-label="Page navigation">
                                 <ul class="pagination justify-content-center">
-                                    <li class="page-item disabled">
-                                        <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                            <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                        </a>
-                                    </li>
-                                    <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                    <li class="page-item-total">of 6</li>
-                                    <li class="page-item">
-                                        <a class="page-link page-link-next" href="#" aria-label="Next">
-                                            Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                        </a>
+                                    <li th:if="${totalPage > 0}" class="page-item" th:each="t : ${#numbers.sequence( 0, (totalPage - 1)/1)}" th:classappend="${t==page} ? active">
+                                        <a class="page-link" th:href="@{/products(size=${size}, page=${t})}" th:text="${t+1}"></a>
                                     </li>
                                 </ul>
                             </nav>
+
+
                         </div><!-- End .col-lg-9 -->
                         <aside class="col-lg-3 order-lg-first">
                             <div class="sidebar sidebar-shop">
@@ -133,7 +109,6 @@
 
 
                                                     </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">3</span>
                                                 </div><!-- End .filter-item -->
 
                                                 <!--<div class="filter-item">
