--- a/src/main/resources/templates/AdminIndex.html
+++ b/src/main/resources/templates/AdminIndex.html
@@ -104,22 +104,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="card card-stats">
-                        <div class="card-header card-header-success card-header-icon">
-                            <div class="card-icon">
-                                <i class="material-icons">store</i>
-                            </div>
-                            <p class="card-category">Sale Money</p>
-                            <h3 class="card-title" th:text="${sumUserExtra}">$34,245</h3>
-                        </div>
-                        <div class="card-footer">
-                            <div class="stats">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="card card-stats">
                         <div class="card-header card-header-danger card-header-icon">
                             <div class="card-icon">
                                 <i class="material-icons">assignment</i>
@@ -145,6 +129,22 @@
                         </div>
                         <div class="card-footer">
                             <div class="stats">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-warning card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">account_balance_wallet</i>
+                            </div>
+                            <p class="card-category">Sale Money</p>
+                            <h3 class="card-title" th:text="${sumUserExtra}">$34,245</h3>
+                        </div>
+                        <div class="card-footer">
+                            <div class="stats">
+
                             </div>
                         </div>
                     </div>
