--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 <main class="main" layout:fragment="content">
     <div class="mb-2"></div><!-- End .mb-2 -->
-    <div class="container">
+    <div class="container" >
         <div class="row">
             <div class="col-xl-3 d-none d-xl-block">
                 <nav class="side-nav">
@@ -23,66 +23,64 @@
 
             <div class="col-lg-8 col-xl-6">
                 <div class="banner banner-overlay banner-lg  content-left">
-                    <a href="#">
-                        <img src="images/index/banners/banner-1.jpg" alt="Banner">
+                    <a th:href="@{/productdetail(id=${banner[0].productid})}">
+                        <img th:src="@{${'/images/upload/banner' + banner[0].img}} ">
                     </a>
                     <div class="banner-content">
-                        <h4 class="banner-subtitle">Pre-order now</h4>
-                        <img src="images/index/banners/banner-1-title.png" alt="Banner 1 Title" width="217" height="54"
-                             class="mb-1">
-                        <a href="#" class="banner-link size-lg">Pre-Order Now<i class="las la-arrow-right"></i></a>
+                        <h4 class="banner-subtitle">New Release</h4>
+                        <p th:text="${banner[0].product.name}" class="mb-1"></p>
+                        <a th:href="@{/productdetail(id=${banner[0].productid})}" class="banner-link size-lg">Buy Now<i class="las la-arrow-right"></i></a>
                     </div>
                 </div><!-- End .banner -->
             </div><!-- End .col-lg-6 -->
 
             <div class="col-sm-6 col-lg-4 col-xl-3">
                 <div class="banner banner-overlay banner-sm content-right">
-                    <a href="#">
-                        <img src="images/index/banners/banner-2.jpg" alt="Banner">
+                    <a th:href="@{/productdetail(id=${banner[1].productid})}">
+                        <img th:src="@{${'/images/upload/banner' + banner[1].img}} ">
                     </a>
                     <div class="banner-content text-right">
                         <h4 class="banner-subtitle">Weekend Offer</h4>
-                        <img class="banner-title-img" src="images/index/banners/banner-2-title.png" alt="Banner-2">
-                        <h4 class="banner-price">Save<span class="price">$19,99</span></h4>
-                        <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
+                        <p th:text="${banner[1].product.name}" class="mb-1"></p>
+                        <a th:href="@{/productdetail(id=${banner[1].productid})}" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                     </div>
                 </div><!-- End .banner -->
 
                 <div class="banner banner-overlay d-none d-lg-block banner-sm content-right align-center">
-                    <a href="#">
-                        <img src="images/index/banners/banner-3.jpg" alt="Banner">
+                    <a th:href="@{/productdetail(id=${banner[2].productid})}">
+                        <img th:src="@{${'/images/upload/banner' + banner[2].img}} ">
                     </a>
                     <div class="banner-content text-right">
-                        <img class="banner-title-img" src="images/index/banners/banner-3-title.png" alt="Banner-3">
+                        <p th:text="${banner[2].product.name}" class="mb-1"></p>
                         <h5 class="text-white">35% OFF</h5>
-                        <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
+                        <a th:href="@{/productdetail(id=${banner[2].productid})}" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                     </div>
                 </div><!-- End .banner -->
             </div><!-- End .col-lg-3 -->
 
             <div class="col-sm-6 col-lg-3">
                 <div class="banner banner-overlay banner-sm content-right align-center">
-                    <a href="#">
-                        <img src="images/index/banners/banner-4.jpg" alt="Banner">
+                    <a th:href="@{/productdetail(id=${banner[3].productid})}">
+                        <img th:src="@{${'/images/upload/banner' + banner[3].img}} ">
                     </a>
                     <div class="banner-content" th:style="|left: auto; right: 3rem; align-items: flex-start;|">
                         <h4 class="banner-subtitle">Weekend Sale</h4>
-                        <img class="banner-title-img" src="images/index/banners/banner-4-title.png" alt="Banner-4">
+                        <p th:text="${banner[3].product.name}" class="mb-1"></p>
                         <h4 class="banner-price"><span class="off">25% off</span></h4>
-                        <a href="#" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
+                        <a th:href="@{/productdetail(id=${banner[3].productid})}" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                     </div>
                 </div><!-- End .banner -->
             </div><!-- End .col-lg-3 -->
 
             <div class="col-lg-9">
                 <div class="banner banner-overlay banner-lg">
-                    <a href="#">
-                        <img src="images/index/banners/banner-5.jpg" alt="Banner">
+                    <a th:href="@{/productdetail(id=${banner[4].productid})}">
+                        <img th:src="@{${'/images/upload/banner' + banner[4].img}} ">
                     </a>
                     <div class="banner-content">
                         <h4 class="banner-subtitle">Amazing Value</h4>
-                        <img class="banner-title-img mb-1" src="images/index/banners/banner-5-title.png" alt="Banner-5">
-                        <a href="#" class="banner-link">Pre-Order Now<i class="las la-arrow-right"></i></a>
+                        <p th:text="${banner[4].product.name}" class="mb-1"></p>
+                        <a th:href="@{/productdetail(id=${banner[4].productid})}" class="banner-link">Buy Now<i class="las la-arrow-right"></i></a>
                     </div>
                 </div><!-- End .banner -->
             </div><!-- End .col-lg-9 -->
